--- a/backend/auth_service/package.json
+++ b/backend/auth_service/package.json
@@ -1,35 +1,40 @@
 {
-  "name": "auth_service",
+  "name": "ecommerce-store",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "tsx src/server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc -p .",
-    "test": "jest",
-    "db:generate": "npx prisma migrate dev --name init"
+    "start": "nodemon src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
+    "typescript": "^5.4.5"
+  },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.3",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/pg": "^8.11.10",
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mysql": "^2.15.26",
+    "@types/nodemon": "^1.19.6",
+    "@types/pg": "^8.11.6",
+    "@types/sequelize": "^4.28.20",
+    "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9",
-    "tsx": "^4.19.2"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.3",
+    "pg": "^8.12.0",
+    "winston": "^3.13.0"
   }
 }
